--- a/package.json
+++ b/package.json
@@ -9,8 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "emit-file-loader": "^0.0.2",
+    "next": "15.1.2",
+    "raw-loader": "^4.0.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.1.2"
+    "react-markdown": "^9.0.1"
+  },
+  "devDependencies": {
+    "vercel": "^39.2.2"
   }
 }
